# Stellgap

./: .gitignore  CMakeLists.txt  Makefile  README.md  meson.build
bld_old/: old_Makefile
src/: Fourier_lib_convolve.f90  Makefile  constants.f90  fitpack.f90  fourier_lib.f  fourier_lib.f90  globals.f90  kind_spec.f  kind_spec.f90  metric_element_create_ver8.46.f  metric_element_create_ver8.46.f90  output.f90  post_process.f  post_process.f90  read_input.f90  stellgap_soundwave_lagrng_ver6.f  stellgap_soundwave_lagrng_ver6.f90  stellgap_soundwave_lagrng_ver7.f  stellgap_soundwave_lagrng_ver7.f90  stellgap_ver5.f  stellgap_ver5.f90  stellgap_ver5_new.f90
src/common/: constants.f90  fourier_lib.f90
src/metric/: README.md  globals.f90  metric_element_create.f90  metric_globals.f90  output.f90  read_input.f90
src/stellgap/: eig_solver.f90  globals.f90  output.f90  post_process.f90  read_input.f90  stellgap_ver5_new.f90
src_new/: constants.f90  eig_solver.f90  fitpack.f90  fourier_lib.f90  fourier_lib_convolve.f90  globals.f90  helper.f90  kind_spec.f90  output.f90  post_process.f90  read_input.f90  stellgap_ver5_new.f90
src_old/: fitpack.f90  stelgp_to_silo.f90
